[workspace]
members = ["nginx-log", "w-json"]
resolver = "2"


[workspace.package]
name = "winnow-parser-collection"
version = "0.1.0"
edition = "2021"
authors = ["hedonwang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
winnow = { version = "0.6.16", features = ["simd"] }
anyhow = "1.0.86"
